Add a route for photo detail
- Create a route for an individual photo page
- Wrap each thumbnail in a link that links to that route

--- a/src/modules/components/photo/gallery.html
+++ b/src/modules/components/photo/gallery.html
@@ -4,7 +4,9 @@
   <ul class="thumbnails">
     <% _.each(gallery, function(thumbnail) { %>
     <li>
-      <img src="<%= thumbnail.dataUri %>" alt="">
+      <a href="#photos/<%= thumbnail.id %>" class="thumbnail">
+        <img src="<%= thumbnail.dataUri %>" alt="">
+      </a>
     </li>
     <% }); %>
   </ul>
