--- a/src/modules/layouts/main.html
+++ b/src/modules/layouts/main.html
@@ -5,7 +5,7 @@
     <header>
       <div class="container">
         <h1 class="logo">
-          <a href="#">Roostagram</a>
+          <a href="#"><img src="/img/logo.png"></a>
         </h1>
       </div>
     </header>
