Add stylus nib support

--- a/src/styles/app.styl
+++ b/src/styles/app.styl
@@ -1,10 +1,10 @@
+@import 'nib';
+
 /* ------------------ */
 /*   Primary styles   */
 /* ------------------ */
 
 * {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -132,12 +132,7 @@ header a {
   background: white;
   border: 12px solid #fff;
   border-bottom-width: 42px;
-  -webkit-box-shadow: 10px 10px 35px #ccc;
   box-shadow: 10px 10px 35px #ccc;
-  -webkit-transform: rotate(3deg);
-  -moz-transform: rotate(3deg);
-  -o-transform: rotate(3deg);
-  -ms-transform: rotate(3deg);
   transform: rotate(3deg);
 }
 
@@ -183,12 +178,7 @@ header a {
   padding: 4px;
   margin-bottom: 20px;
   border: 1px solid #ddd;
-  -webkit-border-radius: 4px;
   border-radius: 4px;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  -ms-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
 
@@ -223,8 +213,6 @@ header a {
   border: 2px solid #9E9E9E;
   margin-bottom: 2em;
   padding: 1em;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -244,12 +232,7 @@ input[type='file'] {
   padding: 1em;
   background: #ebebeb;
   font-size: 16px;
-  -webkit-border-radius: 4px;
   border-radius: 4px;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  -ms-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
   line-height: 1;
   width: 50%;
