Create shared stylus vars

--- a/src/styles/app.styl
+++ b/src/styles/app.styl
@@ -1,4 +1,5 @@
 @import 'nib';
+@import 'shared';
 
 /* ------------------ */
 /*   Primary styles   */
@@ -12,7 +13,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   margin: 0;
   padding: 0;
-  background: #F8F8F8;
+  background: $background_color;
 }
 
 a {
@@ -69,7 +70,7 @@ input.btn:hover {
 /* ------------------ */
 
 header {
-  background: #3b1128;
+  background: $header_background;
   padding: 1.0em 0 .6em;
   margin-bottom: 10em /*3.5em*/;
   text-align: center;
@@ -77,8 +78,8 @@ header {
 
 header a {
   display: inline-block;
-  border-top: 1px solid #ae99a3;
-  border-bottom: 1px solid #ae99a3;
+  border-top: 1px solid $header_logo_border;
+  border-bottom: 1px solid $header_logo_border;
   padding: .2em;
   outline-width: 0;
 }
@@ -115,7 +116,7 @@ header a {
 /* ------------------ */
 
 .top-row {
-  background: #f8f8f8;
+  background: $background_color;
   position: fixed;
   width: 100%;
   left: 0;
