--- a/src/modules/components/tools/standard.html
+++ b/src/modules/components/tools/standard.html
@@ -1,4 +1,4 @@
 <div class="toolbar">
-  <a class="btn" href="#">Webcam</a>
+  <a class="btn" href="#webcam">Webcam</a>
   <a class="btn" href="#upload">upload</a>
 </div>
