Add "Delete Photo" functionality
Introduce a "Delete" button to the photo detail page.  When that button
receives a click, attempt to destroy the page's photo model.

- On success, trigger a Backbone event on the view, forward the event
  from the view to the page, and update the router to navigate to the
  index page in response.
- On failure, append a status message to the DOM.

Finally, enable the integration test written to back this behavior.

--- a/src/modules/components/photo/detail.html
+++ b/src/modules/components/photo/detail.html
@@ -1,6 +1,9 @@
 <% if (typeof dataUri !== "undefined") { %>
   <div class="photo">
     <img src="<%= dataUri %>"/>
+    <div class="delete">
+      <button class="btn">Delete</button>
+    </div>
   </div>
 <% } else { %>
   <div class="error">Photo not found!</div>
